ingress/hostbasedingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: path2.devopstest.tk       
    http:
      paths:
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: path2-svc
            port: 
              number: 80
  - host: path1.devopstest.tk          
    http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: path1-svc
            port: 
              number: 80
