ingress/pathbasedingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "True"
    namespace: ingress
spec:
  rules:
  - host: devopstest.tk      
    http:
      paths:
      - path: /path2/$
        pathType: Prefix
        backend:
          service:
            name: path2-svc
            port: 
              number: 80
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: path1-svc
            port: 
              number: 80
